Update the css styling to make sure the spacing between Search/Browse Results/ Cart/Detail in the navbar stays the same when the browser gets narrow. - In opus.css (line 44-49), add the styling to keep the horizontal spacing   between Search/Browse Results/Cart/Detail the same even when the browser   size is narrow. - In opus.css (line 71-76), add the styling to make sure the height of   top navbar will not change when "Recent Announcement" appears & disappears. - In opus.css (line 79-81), add the styling to make sure "OPUS" on the   top left corner is not moving when browser gets narrow.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -41,15 +41,23 @@ body.modal-open .navbar {
     width: 3em !important;
 }
 
+/* Keep the horizontal spacing between Search/Browse Results/Cart/Detail the same
+even when the browser size is narrow. */
+#op-main-nav .nav-link {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+
 @media (max-width: 992px) {
     #op-main-nav.navbar .navbar-brand {
         float: none;
         display: block;
     }
+
     #op-main-nav.navbar .navbar-nav>.nav-item {
         float: none;
-        margin-left: .1rem;
     }
+
     #op-main-nav.navbar .navbar-nav {
         float: none !important;
     }
@@ -58,6 +66,18 @@ body.modal-open .navbar {
     #op-main-nav-collapse.show, #op-main-nav-collapse.collapsing {
         display: flex;
     }
+}
+
+/* Make sure the height of top navbar will not change when "Recent Announcement"
+appears & disappears. */
+.op-tab a {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+/* Make sure "OPUS" on the top left corner is not moving when browser gets narrow. */
+.op-reset-opus {
+    display: inline-block !important;
 }
 
 @media (max-width: 992px) {
